test/langtools/tools/javac/SuperInit/EarlyAssignmentNoPreview3.out
- compiler.warn.source.no.system.modules.path: 24, (compiler.misc.source.no.system.modules.path: 24)
EarlyAssignmentNoPreview3.java:12:39: compiler.err.feature.not.supported.in.source: (compiler.misc.feature.flexible.constructors), 24, 25
1 error
1 warning
